# Funnel-Web

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  Trunk.toml  dummy_worker.js  dummy_worker_bg.wasm  funnel-web-509a93b1eef47629.js  funnel-web-6c932dbedd1881bd.js  funnel-web-6cf16e89de4d93f3.js  funnel-web-75946686c742eabc.js  funnel-web-7dd5d0799fd0c098.js  funnel-web-9b3483f1a90ef62f.js  funnel-web-b8d606fac4026d76.js  index.html  sw.js
.github/workflows/: pages.yml
assets/: manifest.json
funnel-shared/: Cargo.toml
funnel-shared/src/: guild_channel.rs  lib.rs  member_activity.rs  member_count.rs  message_user.rs  request.rs  response.rs  user_details.rs
funnel-web/: Cargo.toml  index.html
funnel-web/src/: dummy_worker.rs  initializer.rs  lib.rs  main.rs  utils.rs
funnel-web/src/core/: event_bus.rs  event_handler.rs  fetch_status.rs  initializer.rs  mod.rs  state.rs  utils.rs
funnel-web/src/network/: events.rs  http.rs  messages.rs  mod.rs
funnel-web/src/network/ws/: events.rs  messages.rs  mod.rs
funnel-web/src/ui/: date_handler.rs  date_navigator.rs  date_picker.rs  mod.rs  panels.rs  pass_ui.rs  password.rs  start.rs
funnel-web/src/ui/custom_widgets/: animated_label.rs  animated_menu_label.rs  card.rs  horizontal_label.rs  mod.rs  vertical_label.rs
funnel-web/src/ui/tab_ui/: channel_table.rs  common_words.rs  handler.rs  message_chart.rs  mod.rs  overview.rs  user_chart.rs  user_table.rs
funnel-web/src/web_worker/: comm_handler.rs  comms.rs  mod.rs  worker.rs
