[package]
name = "funnel-web"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "funnel-web"
path = "src/main.rs"

[dependencies]
funnel-shared = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = "0.4.41"
eframe = { version = "0.32.0", default-features = false, features = [
    "x11",
    "wayland",
    "default_fonts",
    "glow",
] }
egui-selectable-table = "0.3.0"
egui-theme-lerp = "0.3.0"
egui_extras = { version = "0.32.0", features = [
    "datepicker",
    "all_loaders",
    "serde",
] }
egui_plot = "0.33.0"
ewebsock = { version = "0.8.0", features = ["tls"] }
image = "0.25.6"
log = "0.4.27"
strum = "0.27.2"
strum_macros = "0.27.2"
pretty_env_logger = "0.5.0"
indexmap = "2.10.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
dirs = "6.0.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.50"
web-sys = "0.3.77"
